@@ -1,3 +1,9 @@
+2004-02-06  Dave Malcolm  <david@davemalcolm.demon.co.uk>
+
+	* cong-plugin-manager.h, cong-plugin.c, cong-plugin.h
+
+	Reimplementation of internals of CongPlugin: now uses GType when searching for services of a particular type, rather than hardcoding each individual type
+
 2004-02-05  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
 	* cong-dispspec-registry.c, cong-dispspec.c, cong-dispspec.h
